Simple fix for #9886
Simple fix for Login DropDown being hidden by scroll bar

--- a/src/web/app/page.component.scss
+++ b/src/web/app/page.component.scss
@@ -59,7 +59,7 @@ footer a {
 }
 
 .pull-right {
-  margin-right: 20px;
+  margin-right: 9%;
 }
 
 @media (max-width: 992px) {
